--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="header-app">
       <div class="header-app">
         <img class="logo" src="./assets/trello-tile.svg" alt="Logo Kanban App"/>
+        <h2 class="titulo-header">Tablero de Control basado en Trello</h2>
         <button class="button button-primary" id="btnNewTask">
           Crear Nueva Tarea
         </button>
