--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
                 <select name="responsibleTask" id="responsibleTask"> -- Seleccione un usuario -- </select>
               </div>
               <!-- Fin Input Respopnsable -->
+              <!-- Input Detalle Tarea -->
+              <div class="row-form">
+                <label for="detailsTask" class="form-new-task__label"
+                  >Descripción:</label
+                >
+                <textarea class="form-new-task_input" name="detailsTask" id="detailsTask cols="3" rows="3" placeholder="Ingresa el detalle de la tarea"></textarea>
+              </div>
+              <!-- Fin input detalle tarea -->
               <!-- Input Deadline -->
               <div class="row-form">
                 <label for="deadLineTask" class="from-new-task_label">Plazo de entrega:
@@ -85,8 +93,8 @@
     <script src="js/libraries/draggable.js"></script>
     <script src="js/libraries/hammer.js"></script>
 
-    <script src="js/api/consumo.js" type="module"></script>
-    <script src="js/data/selectUsuarios.js" type="module"></script>
+    <script src="js/api/request.js" type="module"></script>
+    <script src="js/data/selectUsers.js" type="module"></script>
     <script src="js/utils/dragAndDrop.js"></script>
     <script src="js/utils/manageModal.js"></script>
     <script src="js/utils/newTask.js" type="module"></script>
