Se adicionan cambios en las fechas para asignar la fecha del dia y el formato de la fecha de vencimiento

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <script src="js/api/request.js" type="module"></script>
     <script src="js/data/selectUsers.js" type="module"></script>
+    <script src="js/utils/dateUtils.js"></script>
     <script src="js/utils/dragAndDrop.js"></script>
     <script src="js/utils/manageModal.js"></script>
     <script src="js/utils/newTask.js" type="module"></script>
